# lcekold.github.io

./: README.md  config.json  index.html
blog/ABOUT/: About Me.md
blog/C++框架/OPENCV/: 10.图像降噪.md  11.opencv常用函数.md  11.opencv画直方图.md  12.数字图像处理期末考题.md  13.图像锐化及边缘检测.md  18.基础图像处理总结.md  2.基本图像处理操作.md  3.调整图片大小和进行裁剪.md  4.绘制形状和添加文本.md  5.图像变形（透视变换）.md  9.opencv图像增强处理.md
blog/C++框架/QT/: 0.Qt编程规范.md  10.QMediaPlaylist类.md  11.QSlider类(滑动条).md  12.QFileDialog(选择文件或目录).md  13.QTime类.md  14.QMenu创建弹出式菜单.md  17.QDir类访问系统目录结构.md  20.树形控件QTreeWidget.md  22.QProgressDialog进度条.md  23.QtEvent(事件).md  24.透明度效果管理QGraphicsOpacityEffect类详解.md  26.图形场景QGraphicsScene类详解：用于添加、删除和操作图形项，并管理这些项的几何变换、碰撞检测等.md  27.绘制矩形组件QGraphicsRectItem详解：可指定矩形位置、矩形大小范围、矩形边框画笔颜色、矩形填充画刷颜色.md  4.传递某个字符构造QChar对象的问题.md  5.QString字符串与数值的转换.md  6.静态函数asprintf()函数替换%s.md  7.常用按钮组件是否复选的问题.md  9.QT跳转界面.md
blog/CMAKE/ch2_1_message/: first.cmake
blog/CMAKE/ch2_2_set_list/: list.cmake  set.cmake
blog/CMAKE/ch2_4_func_/: func.cmake
blog/CMAKE/ch2_5_scope/: CMakeLists.txt
blog/CMAKE/ch2_6_macro/: macro.cmake
blog/CMAKE/ch3_1_project/: CMakeLists.txt  main.cpp
blog/CMAKE/ch3_2_project/: CMakeLists.txt  main.cpp
blog/CMAKE/ch3_3_project/: CMakeLists.txt
blog/CMAKE/ch3_4_project/: CMakeLists.txt
blog/CMAKE/ch4_1_project/: CMakeLists.txt
blog/CMAKE/ch4_1_project/include/: cat.h
blog/CMAKE/ch4_2_project/: CMakeLists.txt  main.cpp
blog/CMAKE/ch4_2_project/a/Debug/: animal.lib
blog/CMAKE/ch6_option/: CMakeLists.txt  main.cpp
blog/CMAKE/ch6_option/animal/: CmakeLists.txt  cat.cpp  cattwo.cpp  cattwo.h
blog/CMAKE/ch_2_3_control/: for.cmake  if.cmake
blog/Linux/Linux基本操作/: 2.多终端复用器byobu使用.md  3.linux终端特殊按键.md  4.linux磁盘管理和文件系统.md  5.ubuntu添加环境变量的四种方法.md
blog/Linux/Linux驱动开发/: 1.文件描述符是什么.md  2.select函数.md
blog/Linux/Shell语法/: 0.教程推荐.md
blog/Python框架/Anaconda/: 1.什么是Anaconda.md
blog/Python框架/Python人脸检测/: 1.读取图片.md  10.网页视频.md  2.灰度转换.md  3.修改尺寸.md  4.绘制矩形.md  5.人脸检测.md  6.视频检测.md  7.拍照保存.md  8.数据训练.md  9.人脸识别.md
blog/QT/: 1.Qt的元对象（meta object）系统.md  2.QT随机数发生器(QRandomGenerator类).md  3.QChar字符的转换.md  8.QT串口通信.md
blog/datestruct/: 2.数组实现单链表.md
blog/datestruct/常规算法/: 1.快速排序.md  3.二分查找&二分答案.md  4.离散化.md
blog/前端/Json/: 1.Json教程.md
blog/前端/css/: 1.css之使用display：inline-block来布局.md  2.css布局.md  3.HTML中引入css的方式.md
blog/前端/javascript/: 1.js中回调函数.md  2.js模板字符串.md
blog/前端/一些API/: 1.和风天气WebApi使用教程.md  2.和风Api在微信小程序中的使用案例.md
blog/前端/微信小程序/: 1.微信小程序的css.md  2.微信小程序开发简易教程.md  3.具体示例（以智能家居助手为例）.md  4. 小程序发布体验版流程、发布正式版.md  5.微信小程序网络请求服务器php接口获取数据库数据信息.md  6.微信小程序实现登陆和注册同时登陆后显示用户信息.md  7.微信小程序：局部变量和全局变量的使用.md  8.onShow和onLoad的不同.md
blog/前端/正则表达式/: 1.初始正则表达式.md
blog/办公软件/Word/: 1.word表格一拖动就往顶部跑而且还拖不下来了以及在表格前增加文字的解决方案.md
blog/单片机/Arduino教程/: 1.ArduinoJson库的使用.md
blog/单片机/EDA教程/: 0.电位的概念与计算.md  2.基本元件（二极管三极管场效应管）.md
blog/单片机/ESP32/: 2.ESP32常用函数.md  3.面包板与杜邦线的介绍.md
blog/单片机/ESP8266/: 1.ESP8266引脚定义&接线说明.md  2.ESP8266工作模式&AT指令.md  3.ESP8266获取平台返回的数据.md  5.ESP8266和mqtt连接的代码.md  (+2 more)
blog/实验室培训/: 1.第一次培训.md  2.第二次培训.md
blog/数学建模/: 1.matlab基础语法.md
blog/数据库/: 16.删除表.md  21.常用的存储引擎.md  27.索引的创建、删除、修改.md  7.分组函数%聚合函数%多行处理函数.md
blog/有趣的前端小练手/: fafasf.html
blog/机械臂控制/: 1.机械臂入门导读.md  2.机械臂流程总览.md
(+399 files in other folders)
